--- a/lp/scss/_header.scss
+++ b/lp/scss/_header.scss
@@ -45,6 +45,11 @@
   @include transition(opacity);
 
   &:hover { opacity: 0.8; }
+
+  // PC: ロゴエリアを広げてナビリンクとの間を確保
+  @include mq(lg) {
+    margin-right: $space-8;
+  }
 }
 
 .logo-icon {
